--- a/source/sass/blocks/blockquote.scss
+++ b/source/sass/blocks/blockquote.scss
@@ -13,7 +13,7 @@
     left: 0;
     width: 3px;
     height: auto;
-    background-color: var(--color-interactive-default, $blue-default);
+    background-color: var(--color-text, $blue-default);
     border-radius: $border-radius;
   }
 
