--- a/source/sass/blocks/bulleted-list.scss
+++ b/source/sass/blocks/bulleted-list.scss
@@ -23,7 +23,7 @@
       left: 0;
       width: 8px;
       height: 8px;
-      background-color: var(--color-interactive-accent, $blue-default);
+      background-color: var(--color-text, $blue-default);
       border-radius: 50%;
     }
   }
