--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -104,7 +104,7 @@
   outline: none;
   transition: color $style-change-duration;
 
-  color: var(--color-interactive-default, $blue-default);
+  color: var(--color-text, $blue-default);
 
   &::before {
     content: "";
@@ -113,7 +113,7 @@
     left: 0;
     width: 100%;
     height: 1px;
-    background-color: var(--color-interactive-default, $light-blue-accent);
+    background-color: var(--color-text, $light-blue-accent);
     transition: background-color $style-change-duration;
   }
 
