--- a/source/sass/blocks/rating-main.scss
+++ b/source/sass/blocks/rating-main.scss
@@ -764,6 +764,10 @@
   color: $blue-default;
   opacity: 0;
   transition: opacity $style-change-duration;
+
+  &--is-done {
+    color: var(--color-text, $grey-default);
+  }
 }
 
 .rating-main__button-all {
