фикс в боковой карточке на странице одного проекта

--- a/source/sass/blocks/project-vote.scss
+++ b/source/sass/blocks/project-vote.scss
@@ -159,7 +159,7 @@
     stroke: var(--color-icon, $green);
   }
 
-  &--rejected svg {
+  &--reject svg {
     stroke: var(--color-icon, $red);
   }
 }
