--- a/source/sass/blocks/vote-results.scss
+++ b/source/sass/blocks/vote-results.scss
@@ -1,6 +1,7 @@
 .vote-results__output {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   margin: 0;
   font-size: rem(18px);
   line-height: rem(23px);
