--- a/source/sass/blocks/rating-main.scss
+++ b/source/sass/blocks/rating-main.scss
@@ -723,7 +723,7 @@
     display: none;
   }
 
-  @media (max-width: $tablet-width - 1) {
+  @media (max-width: $tablet-width) {
     display: block;
     margin: 0 auto;
     margin-top: 7px;
