--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -11,6 +11,11 @@
   border: 1px solid var(--color-stroke, $light-grey);
   border-radius: 5px;
 
+
+  b {
+    font-weight: 500;
+  }
+
   @media (min-width: $tablet-width) {
     font-size: rem(15px);
     line-height: rem(20px);
