--- a/source/sass/blocks/discussion.scss
+++ b/source/sass/blocks/discussion.scss
@@ -1,10 +1,12 @@
 .discussion {
   box-sizing: border-box;
-  padding: 79px 24px 24px;
+  padding-top: 79px;
+  padding-bottom: 24px;
 
 
   @media (max-width: $tablet-width - 1) {
-    padding: 64px 16px 7px;
+    padding-top: 64px;
+    padding-bottom: 7px;
   }
 }
 
