--- a/source/sass/blocks/budgets.scss
+++ b/source/sass/blocks/budgets.scss
@@ -89,6 +89,7 @@
 }
 
 .budgets__content {
+  max-width: 70%;
   padding-bottom: 25px;
 
   border-bottom: 1px solid var(--color-stroke, $light-grey);
@@ -99,6 +100,14 @@
 
   p {
     line-height: 180%;
+  }
+
+  @media (max-width: $tablet-width) {
+    max-width: 90%;
+  }
+
+  @media (max-width: $mobile-max-width) {
+    max-width: 100%;
   }
 }
 
