--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -1,5 +1,5 @@
 .description {
-  margin: 0;
+  margin: 25px 0;
   padding: 15px;
 
   font-size: rem(13px);
@@ -11,7 +11,6 @@
   border: 1px solid var(--color-stroke, $light-grey);
   border-radius: 5px;
 
-
   b {
     font-weight: 500;
   }
@@ -19,5 +18,13 @@
   @media (min-width: $tablet-width) {
     font-size: rem(15px);
     line-height: rem(20px);
+  }
+
+  @media (max-width: $tablet-width) {
+    margin: 40px 0;
+  }
+
+  @media (max-width: $mobile-max-width) {
+    margin: 30px 0;
   }
 }
