--- a/source/sass/blocks/map-section.scss
+++ b/source/sass/blocks/map-section.scss
@@ -1,7 +1,4 @@
-
 .map-section {
-    margin-bottom: 43px;
-
     iframe, #map {
         border: none;
         border-radius: 5px;
@@ -24,13 +21,12 @@
 }
 
 .map-section__title {
-    margin: 0;
+    margin: 0 0 8px;
     @include font-h2;
 }
 
 .map-section__tip {
     margin: 0;
-    margin-top: 12px;
     margin-bottom: 32px;
 }
 
@@ -73,7 +69,6 @@
 
 @include mobile {
     .map-section {
-        margin-bottom: 18px;
 
         iframe,#map {
             height: 288px;
@@ -81,14 +76,23 @@
     }
 
     .map-section__title {
+        margin-bottom: 16px;
         font-size: rem(24px);
         line-height: rem(28.44px);
     }
 
     .map-section__tip {
-        margin-top: 18px;
         margin-bottom: 25px;
         font-size: rem(15px);
         line-height: rem(27px);
     }
+}
+
+.map-section--height {
+  #map,
+  iframe {
+    @media (min-width: $tablet-width) {
+      height: 400px;
+    }
+  }
 }
