убирает багс info

--- a/source/sass/blocks/info-banner.scss
+++ b/source/sass/blocks/info-banner.scss
@@ -215,14 +215,14 @@
     border-color: var(--color-icon, $green);
 
     @media (max-width: $desktop-width - 1) {
-       margin-bottom: 46px;
-       margin-left: $tablet-padding;
-       margin-right: $tablet-padding;
+      //  margin-bottom: 46px;
+      //  margin-left: $tablet-padding;
+      //  margin-right: $tablet-padding;
     }
 
     @media (max-width: $tablet-width - 1) {
-      margin: 23px $mobile-padding 32px;
-      padding-bottom: 24px;
+      // margin: 23px $mobile-padding 32px;
+      // padding-bottom: 24px;
     }
 
     .info-banner__title {
@@ -238,13 +238,13 @@
     border-color: var(--color-icon, $red);
 
     @media (max-width: $desktop-width - 1) {
-      margin-left: $tablet-padding;
-      margin-right: $tablet-padding;
+      // margin-left: $tablet-padding;
+      // margin-right: $tablet-padding;
     }
 
     @media (max-width: $tablet-width - 1) {
-      margin-left: $mobile-padding;
-      margin-right: $mobile-padding;
+      // margin-left: $mobile-padding;
+      // margin-right: $mobile-padding;
     }
 
     .info-banner__title {
