--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -29,12 +29,16 @@
 }
 
 .proposal__info {
+
+  margin: 0 0 32px;
+
   &:last-child {
     margin-bottom: 0;
   }
 
   @media (min-width: $desktop-width) {
     grid-area: a;
+    margin: 0 0 40px;
   }
 }
 
