--- a/source/sass/blocks/map-popup.scss
+++ b/source/sass/blocks/map-popup.scss
@@ -10,6 +10,12 @@
     //box-shadow: 0px 4px 8px rgba(0, 30, 75, 0.2);
 }
 
+ymaps h3,
+ymaps p {
+  margin: 0;
+  padding: 0;
+}
+
 .map-popup__top-wrapper {
     position: relative;
     padding-right: 10px;
