--- a/source/sass/blocks/rating-list.scss
+++ b/source/sass/blocks/rating-list.scss
@@ -117,6 +117,10 @@
   justify-content: flex-start;
   margin-left: 25px;
 
+  @media (min-width: $desktop-width) {
+    margin-left: auto;
+  }
+
   @media (max-width: $mobile-max-width) {
     margin-left: 0;
   }
