--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -80,6 +80,7 @@
 @import 'blocks/site-tip';
 @import 'blocks/cluster-icon';
 @import 'blocks/map-buttons';
+@import 'blocks/popover';
 
 // main page
 @import "blocks/news-notice";
