--- a/source/components/button-star.html
+++ b/source/components/button-star.html
@@ -1,4 +1,5 @@
-<button class="button-star" type="button" data-tooltip="В избранное" data-flow="down">
+<button class="button-star js-button-favorive" type="button"
+  data-tooltip="В избранное" data-flow="down">
   <svg width="20" height="20" viewBox="0 0 20 20">
     <use xlink:href="img/sprite.svg#icon-star"></use>
   </svg>
