--- a/source/sass/blocks/hearings.scss
+++ b/source/sass/blocks/hearings.scss
@@ -131,6 +131,10 @@
   line-height: rem(27px);
   color: var(--color-text, #354052);
 
+  p {
+    margin-top: 0;
+  }
+
   @include tablet {
     margin-bottom: 40px;
   }
