--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -194,8 +194,10 @@
     margin-bottom: 48px;
   }
 
-  .map-section__address {
-    display: none;
+  &--no-address {
+    .map-section__address {
+      display: none;
+    }
   }
 }
 
