--- a/source/sass/blocks/section.scss
+++ b/source/sass/blocks/section.scss
@@ -20,7 +20,7 @@
   }
 }
 
-.section__tille-wrap {
+.section__title-wrap {
   display: flex;
   align-items: center;
   justify-content: flex-start;
