--- a/source/sass/blocks/application-period.scss
+++ b/source/sass/blocks/application-period.scss
@@ -4,34 +4,28 @@
   align-items: flex-end;
   grid-area: c;
 
+  .button-star {
+    height: 19px;
+    padding: 0;
+    margin-left: auto;
+    transition: opacity $style-change-duration;
+  }
+
   @media (min-width: $desktop-width) {
     display: grid;
     grid-template-areas:
       "a    c"
       "b    c";
 
-    &>* {
+    & > * {
       align-self: start;
     }
-  }
-}
 
-.application-period .button-star {
-  height: 19px;
-  padding: 0;
-  margin-left: auto;
-  transition: opacity $style-change-duration;
-
-  @media (min-width: $desktop-width) {
-    height: 21px;
-    margin-left: 24px;
-    grid-area: c;
-    align-self: center;
-
-    opacity: 1;
-
-    &:hover:not(.focus-visible) {
-      opacity: 1;
+    .button-star {
+      height: 21px;
+      margin-left: 24px;
+      grid-area: c;
+      align-self: center;
     }
   }
 }
