--- a/source/sass/blocks/public-debate.scss
+++ b/source/sass/blocks/public-debate.scss
@@ -100,9 +100,10 @@
       "a    c"
       "b    c";
 
-    // &:hover:not(.focus-visible) .button-star {
-    //   opacity: 1;
-    // }
+    &:hover:not(.focus-visible) .button-star {
+      opacity: 1;
+      display: block;
+    }
   }
 
   &>* {
