--- a/source/sass/blocks/rating-list.scss
+++ b/source/sass/blocks/rating-list.scss
@@ -117,6 +117,7 @@
   align-items: center;
   justify-content: flex-start;
   margin-left: 25px;
+  white-space: nowrap;
 
   @media (min-width: $desktop-width) {
     margin-left: auto;
