ограничивает ширину блока при ховере

--- a/source/sass/blocks/rating-main.scss
+++ b/source/sass/blocks/rating-main.scss
@@ -771,6 +771,7 @@
 
 .rating-main__hover-text {
   position: absolute;
+  max-width: 35%;
   top: 50%;
   right: 17px;
   transform: translateY(-50%);
