--- a/source/sass/blocks/discussion.scss
+++ b/source/sass/blocks/discussion.scss
@@ -179,18 +179,18 @@
   }
 }
 
-// .discussion__button {
-//   // padding: 16px 24px 15px;
-//   display: block;
-//   max-width: 420px;
-//   width: 100%;
-//   margin: 0 auto;
-//   width: auto;
+.discussion__button {
+  // padding: 16px 24px 15px;
+  display: block;
+  max-width: 420px;
+  width: 100%;
+  margin: 0 auto;
+  width: auto;
 
-//   .discussion__hide {
-//     padding: 0;
-//   }
-// }
+  .discussion__hide {
+    padding: 0;
+  }
+}
 
 .discussion__hide {
   @media (max-width: $tablet-width - 1) {
