--- a/source/sass/blocks/category-list.scss
+++ b/source/sass/blocks/category-list.scss
@@ -71,7 +71,7 @@
     }
   }
 
-  @media (max-width: $mobile-max-width ) {
+  @media (max-width: $mobile-max-width) {
     &:hover {
       .category-list__link {
         padding-bottom: 50px;
@@ -79,6 +79,10 @@
 
       .category-list__hover-text {
         bottom: 26px;
+      }
+
+      .category-list__count-wrap {
+        opacity: 1;
       }
     }
   }
@@ -137,6 +141,11 @@
 }
 
 .category-list__hover-text {
+  position: absolute;
+  top: 50%;
+  right: 16px;
+  transform: translateY(-50%);
+
   font-family: inherit;
   font-weight: 400;
   font-size: 13px;
@@ -147,8 +156,37 @@
   transition: opacity $style-change-duration;
   white-space: nowrap;
 
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-bg-secondary, $color-bg);
+    z-index: -1;
+    box-shadow: 0 0 10px 17px var(--color-bg-secondary, $color-bg);
+  }
+
   &--is-done {
     color: var(--color-text, $grey-default);
+  }
+
+  @media (max-width: $tablet-width) {
+    position: static;
+    top: auto;
+    bottom: auto;
+    right: auto;
+    left: auto;
+
+    transform: translateY(0);
+    margin-left: auto;
+
+    &::after {
+      display: none;
+    }
   }
 
   @media (max-width: $mobile-max-width ) {
@@ -196,6 +234,7 @@
 
   @media (max-width: $mobile-max-width ) {
     position: static;
+    align-self: flex-start;
   }
 }
 
