--- a/source/sass/blocks/unavailable.scss
+++ b/source/sass/blocks/unavailable.scss
@@ -13,6 +13,7 @@
 .unavailable__content-wrapper {
   @media (min-width: $desktop-width) {
     margin-top: 108px;
+    margin-bottom: auto;
     width: calc(100% / 2);
   }
 }
