исправляет высоту линии и обновляет билд

--- a/source/sass/blocks/category-list.scss
+++ b/source/sass/blocks/category-list.scss
@@ -219,7 +219,7 @@
 
   .category-list__count {
     font-size: 16px;
-    line-height: 22;
+    line-height: 22px;
     color: var(--color-text, $grey);
     background-color: var(--color-bg-main, $light-grey);
   }
