--- a/source/sass/blocks/poll-page.scss
+++ b/source/sass/blocks/poll-page.scss
@@ -37,6 +37,10 @@
   display: block;
   opacity: 1;
 
+  &:hover {
+    color: var(--color-interactive-accent, $blue-accent);
+  }
+
   svg {
     width: 24px;
     height: 24px;
