--- a/source/sass/blocks/rating.scss
+++ b/source/sass/blocks/rating.scss
@@ -50,6 +50,7 @@
 
     &:hover:not(.focus-visible) .button-star {
       opacity: 1;
+      color: var(--color-interactive-accent, $blue-accent);
     }
   }
 
