--- a/source/sass/blocks/application-period.scss
+++ b/source/sass/blocks/application-period.scss
@@ -9,6 +9,10 @@
     padding: 0;
     margin-left: auto;
     transition: opacity $style-change-duration;
+
+    &:hover {
+      color: var(--color-interactive-accent, $blue-accent);
+    }
   }
 
   @media (min-width: $desktop-width) {
