--- a/source/sass/blocks/hearings-status.scss
+++ b/source/sass/blocks/hearings-status.scss
@@ -42,6 +42,10 @@
     display: block;
     opacity: 1;
 
+    &:hover {
+      color: var(--color-interactive-accent, $blue-accent);
+    }
+
     @include mobile {
       display: flex;
       align-items: center;
