--- a/source/sass/blocks/project-item.scss
+++ b/source/sass/blocks/project-item.scss
@@ -132,19 +132,23 @@
   border-top: 1px solid var(--color-stroke, $light-grey);
 }
 
-.project-item .button-star {
-  position: absolute;
-  right: 18px;
-  bottom: 6px;
-  opacity: 0;
-}
-
 .project-item .button-star--active,
 .project-item .button-star:focus,
 .project-item .button-star:hover,
 .project-item__link:focus + .button-star,
 .project-item__link:hover + .button-star {
   opacity: 1;
+}
+
+.project-item .button-star {
+  position: absolute;
+  right: 18px;
+  bottom: 6px;
+  opacity: 0;
+
+  &:hover {
+    color: var(--color-interactive-accent, $blue-accent);
+  }
 }
 
 
