--- a/source/sass/blocks/project-meta.scss
+++ b/source/sass/blocks/project-meta.scss
@@ -63,6 +63,10 @@
     width: 24px;
     height: 24px;
   }
+
+  &:hover {
+    color: var(--color-interactive-accent, $blue-accent);
+  }
 }
 
 @include mobile {
