--- a/source/sass/blocks/map-section.scss
+++ b/source/sass/blocks/map-section.scss
@@ -75,9 +75,10 @@
         }
 
       #improvement-map {
-        height: 512px;
+        height: calc(100vh - 64px);
       }
     }
+
 
     .map-section__title {
         margin-bottom: 16px;
