--- a/source/sass/blocks/project-item.scss
+++ b/source/sass/blocks/project-item.scss
@@ -144,7 +144,7 @@
   position: absolute;
   right: 18px;
   bottom: 6px;
-  opacity: 0;
+  // opacity: 0;
 
   &:hover {
     color: var(--color-interactive-accent, $blue-accent);
