--- a/source/sass/blocks/concurrent-voting.scss
+++ b/source/sass/blocks/concurrent-voting.scss
@@ -32,21 +32,21 @@
   }
 }
 
-.concurrent-voting__head {
-  margin-bottom: 20px;
+// .concurrent-voting__head {
+  // margin-bottom: 20px;
 
-  @media (max-width: $tablet-width - 1) {
-    margin-bottom: 12px;
-  }
+  // @media (max-width: $tablet-width - 1) {
+  //   margin-bottom: 12px;
+  // }
 
-  svg {
-    @media (max-width: $tablet-width - 1) {
-      width: 48px;
-      height: 48px;
-      align-self: flex-start;
-    }
-  }
-}
+//   svg {
+//     @media (max-width: $tablet-width - 1) {
+//       width: 48px;
+//       height: 48px;
+//       align-self: flex-start;
+//     }
+//   }
+// }
 
 .concurrent-voting__title {
   margin: 0;
