--- a/source/sass/blocks/section.scss
+++ b/source/sass/blocks/section.scss
@@ -6,28 +6,18 @@
   text-align: left;
 }
 
-.section__head {
-  // margin-bottom: 8px;
-  display: flex;
-  flex-flow: row wrap;
-
-  @media (min-width: $tablet-width) {
-    // margin-bottom: 16px;
-  }
-
-  @media (min-width: $desktop-width) {
-    // margin-bottom: 24px;
-  }
-}
-
 .section__title-wrap {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: flex-start;
 
   max-width: 70%;
   width: 100%;
   margin: 0 auto 25px 0;
+
+  svg {
+    flex-shrink: 0;
+  }
 
   @media (max-width: $tablet-width) {
     margin-bottom: 42px;
@@ -40,7 +30,7 @@
 }
 
 .section__title {
-  margin: 0 auto 0 0;
+  margin: 0;
   padding: 0 0 0 20px;
 
   @include font-h1();
