--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,6 +1,7 @@
 $desktop-width: 1200px;
 $tablet-max-width: 1024px;
 $tablet-width: 768px;
+$tablet-min-width: 500px;
 $mobile-max-width: 400px;
 $mobile-width: 320px;
 
