--- a/source/sass/blocks/category-list.scss
+++ b/source/sass/blocks/category-list.scss
@@ -7,7 +7,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 8px;
 
-  @media (max-width: $tablet-max-width) {
+  @media (max-width: $tablet-max-width - 1px) {
     grid-template-columns: repeat(1, 1fr);
   }
 }
@@ -53,7 +53,7 @@
       color: var(--color-text, $grey-lighter);
     }
 
-    @media (max-width: $tablet-max-width) {
+    @media (max-width: $tablet-max-width - 1px) {
       box-shadow: unset;
       top: 70%;
 
@@ -257,7 +257,7 @@
   &--is-done {
     color: var(--color-text, $grey-default);
 
-    @media (max-width: $tablet-max-width) {
+    @media (max-width: $tablet-max-width - 1px) {
       right: 36px;
       top: unset;
       bottom: 16px;
@@ -289,6 +289,7 @@
 
   opacity: 1;
   transition: opacity $style-change-duration;
+  box-shadow: 0 0 10px 17px var(--color-bg-secondary, $color-bg);
 
   transform: translateY(-50%);
 
@@ -459,7 +460,7 @@
     display: none;
   }
 
-  @media (max-width: $tablet-max-width) {
+  @media (max-width: $tablet-max-width - 1px) {
     grid-template-columns: repeat(2, 1fr);
 
     .category-list__link {
