--- a/source/sass/blocks/improvement-stage.scss
+++ b/source/sass/blocks/improvement-stage.scss
@@ -26,7 +26,7 @@
 
 
   &--status {
-    @media (max-width: $tablet-max-width - 1px) and (min-width: $tablet-min-width) {
+    @media (max-width: $tablet-max-width + 100) and (min-width: $tablet-min-width) {
       white-space: nowrap;
     }
   }
